# QuickDraw-pytorch

./: .gitignore  Dockerfile  README.md  convert_qdq_to_qop.py  launch_docker.sh  main.py  main_qat.py  pyproject.toml  run_2bit_experiments.sh  run_experiments.sh
Checkpoints/: model_8bit_qcdq_clean.onnx
DataUtils/: __init__.py  generate_data.py  load_data.py  prepare_data.py
Dataset/: class_names.txt
Model/: __init__.py  nets.py  qnets.py
PyQtDemo/: .gitignore  run_demo.sh  setup.sh  sketch_demo.py
